src/scss/app.scss
$primary-color: #674172; //purple
$secondary-color: #444; //grey
$background-color: #ecf0f1; //white
$highlight-color: #FCD53B; //sunflower

body {
    background: $background-color;
}

h1 {
    font-weight: 200;
    color: $primary-color;
}

h2 {
    font-weight: 200;
    color: $primary-color;
}

h4 {
    font-size: 15pt;
    color: $secondary-color;
}

h6 {
    font-size: 11pt;
    color: $secondary-color;
}

p {
    font-size: 12pt;
    color: $secondary-color;
}

a:link,
a:visited,
a:hover {
    color: $primary-color;
}

progress {
    top: 0;
    position: fixed;
    background-color: transparent;
}

progress:indeterminate {
    color: white;
    width: 100%;
}

.left {
    float: left;
}

.right {
    float: right;
}

.elsie-title {
    font-size: 14pt;
    font-weight: 600;
    margin: 20px 0 5px;
    text-transform: uppercase;
    clear: both;
    color: $primary-color;
    &.solo {
        margin: 15px auto 10px;
        width: 90%;
    }
}

#brand-container {
    background: $primary-color;
    margin-bottom: 20px;
    padding: 10px 0;
    background: url('../img/top.png') no-repeat bottom center $primary-color;
    background-size: contain;
}

#brand {
    width: 90%;
    margin: 0 auto;
    text-align: left;
    h1 {
        color: transparent;
        letter-spacing: -2px;
        font-size: 32pt;
    }
}

#mini-brand {
    display: none;
}

#recent {
    width: 90%;
    margin: 0 auto;
    display: none;
}

#explanation {
    width: 80%;
    margin: 50px auto;
    color: $secondary-color;
    display: none;
    opacity: 0.6;
    text-align: center;
}

#status {
    text-align: center;
}

#productResults {
    margin: 0 auto;
    display: none;
    width: 90%;
}

#closestStores {
    margin: 0 auto;
    width: 90%;
}

#about-container {
    background: url("../img/logo.png") no-repeat center bottom $primary-color;
    margin: -15px 0 0;
    width: 100%;
    height: 100%;
    background-size: 90%;
}

#about {
    width: 90%;
    margin: 0 auto;
    padding-top: 20px;
    p {
        color: $background-color;
    }
    a:link,
    a:visited,
    a:hover {
        color: $highlight-color;
    }
}

#nearbyStores {
    margin-top: -10px;
}

#nearbyStores .block,
#closestStores .block {
    display: none;
}

// win-appbar
.win-appbar,
.win-toolbar-actionarea,
html.win-hoverable button.win-command:enabled:hover,
html.win-hoverable.win-appbar.win-appbar-hiding button.win-appbar-invokebutton:enabled:hover, html.win-hoverable .win-appbar.win-appbar-hiding button.win-appbar-invokebutton:enabled:hover, html.win-hoverable.win-appbar.win-appbar-hidden button.win-appbar-invokebutton:enabled:hover, html.win-hoverable .win-appbar.win-appbar-hidden button.win-appbar-invokebutton:enabled:hover,
button.win-command.win-command:enabled:hover:active, button.win-command.win-command:enabled:active,
html.win-hoverable.win-appbar.win-appbar-showing button.win-appbar-invokebutton:enabled:hover,
html.win-hoverable .win-appbar.win-appbar-showing button.win-appbar-invokebutton:enabled:hover,
html.win-hoverable.win-appbar.win-appbar-shown button.win-appbar-invokebutton:enabled:hover,
html.win-hoverable .win-appbar.win-appbar-shown button.win-appbar-invokebutton:enabled:hover,
html.win-hoverable.win-toolbar button.win-toolbar-overflowbutton:hover, html.win-hoverable .win-toolbar button.win-toolbar-overflowbutton:hover, html.win-hoverable.win-toolbar .win-toolbar-overflowarea button.win-command:hover, html.win-hoverable .win-toolbar .win-toolbar-overflowarea button.win-command:hover,
html.win-hoverable.win-appbar.win-appbar-showing button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable .win-appbar.win-appbar-showing button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable.win-appbar.win-appbar-shown button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable .win-appbar.win-appbar-shown button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis {
    background-color: $primary-color;
    color: white;
}

.win-appbar-menu {
    width: 100%;
}

.win-toolbar .win-toolbar-actionarea {
    -webkit-justify-content: center;
    -ms-flex-align: center;
    justify-content: center;
}

.win-commandring,
html.win-hoverable button:enabled:hover .win-commandring {
    border-color: white;
}

button:disabled .win-commandring {
    border-color: rgba(255, 255, 255, 0.4);
}

.win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:focus .win-appbar-ellipsis, .win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:focus .win-appbar-ellipsis {
    border-color: transparent;
}

.win-commandlayout .win-primarygroup {
    -webkit-justify-content: center;
    justify-content: center;
    -ms-flex-align: center;

}

.win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled .win-appbar-ellipsis, .win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled .win-appbar-ellipsis,
html.win-hoverable.win-appbar.win-appbar-hiding button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable .win-appbar.win-appbar-hiding button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable.win-appbar.win-appbar-hidden button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis, html.win-hoverable .win-appbar.win-appbar-hidden button.win-appbar-invokebutton:enabled:hover .win-appbar-ellipsis,
html.win-hoverable button.win-command:enabled:hover .win-commandglyph,
.win-toolbar button.win-toolbar-overflowbutton:enabled .win-toolbar-ellipsis, .win-toolbar button.win-toolbar-overflowbutton:enabled .win-toolbar-ellipsis,
.win-menu button, .win-menu button {
    color: white;
}

.win-toolbar.win-toolbar-inlinemenu .win-toolbar-overflowbutton {
    right: 0;
    position: absolute;
}

.win-label,
.win-commandimage {
    color: white;
    &:hover {
        color: white;
    }
}

button:disabled .win-commandring, button:disabled:active .win-commandring {
    border-color: rgba(255, 255, 255, 0.4);
}

.win-appbar.win-menulayout .win-toolbar, .win-appbar.win-menulayout .win-toolbar,
.win-appbar.win-appbar-hiding button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:hover:active, .win-appbar.win-appbar-hiding button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:hover:active, .win-appbar.win-appbar-hidden button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:hover:active, .win-appbar.win-appbar-hidden button.win-appbar-invokebutton.win-appbar-invokebutton:enabled:hover:active,
button:disabled, input[type=button]:disabled, input[type=reset]:disabled, button:disabled:hover:active, input[type=button]:disabled:hover:active, input[type=reset]:disabled:hover:active {
    background: $primary-color;
}

button:disabled, input[type=button]:disabled, input[type=reset]:disabled, button:disabled:hover:active, input[type=button]:disabled:hover:active, input[type=reset]:disabled:hover:active {
    border-color: transparent;
}

button.win-command:disabled .win-label, button.win-command:disabled:active .win-label,
button:disabled .win-commandimage, button:disabled:active .win-commandimage {
    color: rgba(255, 255, 255, 0.4);
}

// win-searchbox
.win-searchbox {
    margin: 0 auto;
    padding: 0;
    bottom: 0;
    width: 90%;
    height: 52px;
    border-color: #ddd;
    input {
        font-size: 14pt;
        width: 100%;
        padding: 0 10px;
    }
}

.win-searchbox-suggestion-selected {
    color: white;
}

.win-searchbox-suggestion-result-text {
    width: auto;
}

.win-searchbox-suggestion-result-detailed-text > span {
	opacity: 0.5;
}

input[type=text]:focus,
input[type=password]:focus,
input[type=email]:focus,
input[type=number]:focus,
input[type=tel]:focus,
input[type=url]:focus,
input[type=search]:focus,
textarea:focus,
.win-textarea:focus {
    border-color: $primary-color;
}

// win-pivot
.win-pivot-title {
    text-transform: uppercase;
    color: $primary-color;
    display: none;
}

.win-pivot-item .win-pivot-item-content {
    width: 90%;
    padding: 0 5%;
}

.win-pivot-headers {
    z-index: 9000;
}

.win-pivot button.win-pivot-header,
.win-pivot button.win-pivot-header:hover,
.win-pivot button.win-pivot-header:hover:active,
html.win-hoverable .win-pivot button.win-pivot-header:hover {
    font-weight: 200;
    color: $primary-color;
}

.win-listview > .win-vertical .win-container {
    margin-right: 0;
    margin-left: 0;
    max-height: 80px !important;
}

.win-listview .win-itembox {
    border-left: 5px $primary-color solid;
}

html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-itemcontainer.win-container:hover {
    outline: none;
}

//custom

#mapDiv img {
    width: 100%;
}

.wordmark {
    margin: 40px auto;
    display: block;
    width: 50%;
}

.listItem {
    width: 95%;
    //height: 70px;
    padding: 5px;
    overflow: hidden;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    .block {
        width: 50px;
        height: 42px;
        background-color: $primary-color;
        margin-right: 10px;
        float: left;
        text-align: center;
        padding: 4px 0;
        .quantity {
            font-size: 17pt;
            color: white;
            width: 100%;
            text-align: center;
            display: block;
        }
        .remaining {
            font-size: 7pt;
            text-transform: uppercase;
            color: white;
            text-align: center;
            width: 100%;
            display: block;
        }
    }
    img.listItem-Image {
        height: 70px;
        margin: 0;
    }
    .listItem-Detail {
        margin: 5px;
        width: 100%;
        h4 {
            overflow: hidden;
            white-space: nowrap;
        }
    }
}

.details {
    height: 150px;
    background: white;
    border: 2px #ddd solid;
    .image {
        width: 30%;
        max-height: 300px;
        overflow: hidden;
        float: left;
        img {
            width: 100%;
        }
    }
    .glance {
        width: 65%;
        margin-left: 5%;
        margin-top: 3%;
        float: left;
        &.linear {
            width: 100%;
            margin: 0;
            .fact {
                width: 100%;
                margin-bottom: 15px;
            }
        }
        .fact {
            margin-bottom: 10px;
            width: 50%;
            float: left;
            text-transform: lowercase;
            .value {
                color: $secondary-color;
            }
            .key {
                color: $primary-color;
            }
            .value,
            .key {
                //text-transform: uppercase;
                font-weight: 200;
            }
        }
    }
    &.store {
        height: 198px;
        .glance {
            width: 100%;
            margin-left: 0;
        }
    }
}

